# reply-gremlin

./: .gitignore  LICENSE  README.md  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/gmail/: route.ts
app/api/gmail/verify/: route.ts
backend-python/: .env.example  README.md  pyproject.toml
backend-python/app/: constants.py  gmail_server.py  main.py
backend-python/app/routes/: session.py
backend-python/backend_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
components/: action-buttons.tsx  app.tsx  circular-voice-assistant.tsx  email-display.tsx  email-list.tsx  inline-result.tsx  left-panel.tsx  right-panel.tsx
components/ui/: sidebar.tsx
data/: mock-emails.ts
gmail_mcp/: README.md  __init__.py  main.py  pyproject.toml
lib/: gmail-api.ts  gmail-functions.ts  mcp.ts  utils.ts
scripts/: setup-token.js
src/: example.ts
types/: email.ts
