[project]
name = "backend-python"
version = "0.1.0"
description = "FastAPI backend for session route"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai-agents"
]

[tool.uv]
# uv-specific config can go here if needed