[project]
name = "reply-gremlin"
version = "0.1.0"
description = "Gmail MCP integration with OpenAI Agents"
requires-python = ">=3.9"
dependencies = [
    "openai-agents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_mcp"] 
